# programmiersprachen-aufgabe-4

./: CMakeLists.txt
source/: CMakeLists.txt  List.hpp  TestList.cpp  Vec2.cpp  aufgabe1.cpp  aufgabe10.cpp  aufgabe2bis4.cpp  circle.cpp  mat2.cpp
source/oldcpps/: aufgabe10.cpp  aufgabe5.cpp  aufgabe7bis9.cpp  circle.hpp  color.hpp  main.cpp
