# Build main
add_executable(main
  main.cpp)

# Build aufgabe2bis4
add_executable(aufgabe2bis4
  aufgabe2bis4.cpp)

# Build aufgabe5
add_executable(aufgabe5
  aufgabe5.cpp)

# Build aufgabe7bis10
add_executable(aufgabe7bis9
  aufgabe7bis9.cpp
  circle.cpp
  color.cpp
  mat2.cpp
  Vec2.cpp)

# Build aufgabe10
add_executable(aufgabe10
  aufgabe10.cpp)
